--- a/src/components/navigation/navLinks.css
+++ b/src/components/navigation/navLinks.css
@@ -1,5 +1,4 @@
 /* Navigation Links */
-
 ul {
   list-style: none;
   display: flex;
@@ -14,7 +13,7 @@ li {
 }
 
 .navLinks {
-  color: var(--black);
+  color: var(--khaki);
   text-decoration: none;
   font-size: 1.2em;
   font-family: "Gochi Hand", cursive;
@@ -23,4 +22,6 @@ li {
 
 .navLinks:hover {
   color: var(--white);
+  unicode-bidi: bidi-override;
+  direction: rtl;
 }
