--- a/src/components/joy/mainText.css
+++ b/src/components/joy/mainText.css
@@ -1,4 +1,10 @@
-p {
-  font-family: poppins;
+.main_text {
   color: var(--khaki);
+  font-family: var(--RubikMonoOne);
+  font-size: 2em;
+  position: relative;
+}
+
+.main_text span:hover {
+  color: var(--yellow);
 }
