--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap");
 /* Custom css resets */
 * {
   margin: 0;
@@ -19,18 +19,19 @@
   /* Fonts */
   --RubicGlitch: "Rubik Glitch", cursive;
   --GochiHand: "Gochi Hand", cursive;
+  --RubikMonoOne: "Rubik Mono One", sans-serif;
 }
 
 body {
   background-color: var(--black);
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .spinner {
   position: absolute;
-  top: 50%;
+  top: 50vh;
   left: 50%;
   transform: translate(-50%);
 }
