--- a/src/components/joy/rotatingText.css
+++ b/src/components/joy/rotatingText.css
@@ -1,5 +1,5 @@
 .circle {
-  width: 90%;
+  width: 100%;
   height: 40vh;
   position: relative;
   margin-bottom: 2em;
@@ -7,10 +7,10 @@
 
 .rotating_text_container {
   position: absolute;
-  width: 5em;
-  height: 5em;
-  bottom: 2em;
-  right: 2em;
+  width: 1em;
+  height: 1em;
+  bottom: 1em;
+  right: 1em;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -19,9 +19,9 @@
 
 .rotating_text {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  animation: rotateText 10s linear infinite;
+  width: 20vw;
+  height: 20vh;
+  animation: rotateText 20s linear infinite;
 }
 
 @keyframes rotateText {
