--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,10 +1,60 @@
 section.about {
-  margin-top: 1em;
-  width: 100%;
+  margin: 1em 0 0 6em;
+  width: 95%;
+  display: grid;
+  grid-template: repeat(9, 11%) / repeat(9, 10%);
+}
+
+.click_me_section {
   display: flex;
   flex-direction: column;
+  grid-column: 4/8;
+  grid-row: 1/10;
   align-items: center;
   justify-content: center;
+}
+
+.popup {
+  color: var(--white);
+  font-size: var(--GochiHand);
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup p {
+  text-align: center;
+}
+
+.popup1 {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.popup2 {
+  grid-column: 2/4;
+  grid-row: 3/5;
+}
+
+.popup3 {
+  grid-column: 1/4;
+  grid-row: 5/10;
+}
+
+.popup4 {
+  grid-column: 9/10;
+  grid-row: 5/10;
+}
+
+.popup5 {
+  grid-column: 8/10;
+  grid-row: 1/3;
+}
+
+.popup6 {
+  grid-column: 8/10;
+  grid-row: 3/5;
 }
 
 .about h2 {
@@ -35,7 +85,7 @@ section.about {
   height: 15em;
   object-fit: cover;
   border-radius: 50%;
-  border: 1em solid var(--khaki);
+  border: 1em solid var(--white);
   animation: flowingInImg 2s linear;
 }
 
@@ -43,12 +93,14 @@ section.about {
   0% {
     margin-right: -15em;
     opacity: 0;
-    border: 0 solid var(--khaki);
   }
 
   100% {
     margin-right: 0;
     opacity: 1;
-    border: 1em solid var(--khaki);
   }
+}
+
+.about img {
+  cursor: pointer;
 }
