the number of the font families are reduced to 2 as well as  github and linkedin texts turn into icons

--- a/src/components/joy/mainText.css
+++ b/src/components/joy/mainText.css
@@ -1,6 +1,6 @@
 .main_text {
   color: var(--khaki);
-  font-family: var(--RubikMonoOne);
+  font-family: var(--secondary-font);
   font-size: 2em;
   position: relative;
 }
