--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,5 @@
 section.about {
-  margin: 1em 0 0 6em;
+  margin: 3em 0 3em 4em;
   width: 95%;
   display: grid;
   grid-template: repeat(9, 11%) / repeat(9, 10%);
@@ -9,7 +9,7 @@ section.about {
 .click_me_section {
   display: flex;
   flex-direction: column;
-  grid-column: 4/8;
+  grid-column: 3/8;
   grid-row: 1/10;
   align-items: center;
   justify-content: center;
@@ -17,7 +17,8 @@ section.about {
 
 .popup {
   color: var(--white);
-  font-size: var(--GochiHand);
+  font-size: 1em;
+  font-family: var(--secondary-font);
   flex-direction: column;
   display: flex;
   align-items: center;
@@ -31,11 +32,13 @@ section.about {
 .popup1 {
   grid-column: 1/3;
   grid-row: 1/3;
+  transition: all 1s;
 }
 
 .popup2 {
   grid-column: 2/4;
   grid-row: 3/5;
+  font-size: 1em;
 }
 
 .popup3 {
@@ -49,7 +52,7 @@ section.about {
 }
 
 .popup5 {
-  grid-column: 8/10;
+  grid-column: 7/9;
   grid-row: 1/3;
 }
 
@@ -60,8 +63,8 @@ section.about {
 
 .about h2 {
   color: var(--khaki);
-  font-family: var(--RubikMonoOne);
-  font-size: 2em;
+  font-family: var(--secondary-font);
+  font-size: 1em;
   text-align: center;
   order: 2;
   margin-top: 1em;
