--- a/src/components/navigation/navLinks.css
+++ b/src/components/navigation/navLinks.css
@@ -16,7 +16,7 @@ li {
   color: var(--khaki);
   text-decoration: none;
   font-size: 1.2em;
-  font-family: "Gochi Hand", cursive;
+  font-family: var(--secondary-font);
   transition: 0.5s;
 }
 
