--- a/src/components/navigation/hamburgerMenu.css
+++ b/src/components/navigation/hamburgerMenu.css
@@ -42,3 +42,22 @@ i {
   background-color: var(--white);
   cursor: pointer;
 }
+
+@media (max-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (max-width: 992px) {
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (max-width: 1400px) {
+}
