--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -23,3 +23,22 @@ nav {
 .logo:hover {
   color: var(--yellow);
 }
+
+@media (max-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (max-width: 992px) {
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (max-width: 1400px) {
+}
