butified navigation with active class using useState

--- a/src/components/navigation/navLinks.css
+++ b/src/components/navigation/navLinks.css
@@ -24,6 +24,11 @@
   color: var(--yellow);
 }
 
+.navLinks-active {
+  color: var(--yellow);
+  text-decoration: var(--yellow) underline;
+}
+
 @media (max-width: 576px) {
   .nav-list {
     margin-bottom: 0;
