--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -22,20 +22,42 @@
   color: var(--yellow);
 }
 
-@media (max-width: 576px) {
+@media (min-width: 100px) and (max-width: 299px) {
   .contact_me_container {
-    margin: 2em 0 1em;
-    font-size: 0.8em;
+    margin: 2em 1em 1em;
+    font-size: 1em;
+    height: 50vh;
+  }
+
+  .contact_me_email {
+    font-size: 1em;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 576px) {
+  .contact_me_container {
+    margin: 2em 0 0;
+    font-size: 1.2em;
     height: 50vh;
   }
 }
 
-/* Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
+/* Medium devices (tablets, 767px and up) */
+@media (min-width: 577px) and (max-width: 767px) {
+  .contact_me_container {
+    margin: 1em 4em 1em;
+    font-size: 2em;
+    height: 50vh;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 992px) {
+  .contact_me_container {
+    margin: 1em 3em 1em;
+    font-size: 2.5em;
+    height: 50vh;
+  }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
