--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,5 @@
 section.about {
-  margin: 3em 0 3em 4em;
+  margin: 3em auto;
   width: 95%;
   height: 60vh;
   display: grid;
@@ -111,6 +111,44 @@ section.about {
 }
 
 @media (max-width: 576px) {
+  .about img {
+    width: 10em;
+    height: 10em;
+  }
+  .popup {
+    font-size: 0.7em;
+  }
+  .popup1 {
+    grid-column: 1/6;
+    grid-row: 1/2;
+    transition: all 1s;
+  }
+
+  .popup2 {
+    grid-column: 1/4;
+    grid-row: 3/5;
+    font-size: 1em;
+  }
+
+  .popup3 {
+    grid-column: 1/4;
+    grid-row: 4/10;
+  }
+
+  .popup4 {
+    grid-column: 8/11;
+    grid-row: 5/10;
+  }
+
+  .popup5 {
+    grid-column: 7/9;
+    grid-row: 1/3;
+  }
+
+  .popup6 {
+    grid-column: 9/11;
+    grid-row: 3/7;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
