--- a/src/components/joy/motion.css
+++ b/src/components/joy/motion.css
@@ -3,7 +3,7 @@
   width: 60vh;
   height: 20vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -12,8 +12,6 @@
   height: 5em;
   background-color: var(--white);
 }
-.box-triangle {
+.box-rotating {
   justify-self: flex-end;
-  -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
