letter spacing is modified in about page and animation box are resized

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -24,10 +24,8 @@ section.about {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.popup p {
   text-align: center;
+  letter-spacing: 0.1em;
 }
 
 .popup1 {
