--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -108,13 +108,21 @@ section.about {
   cursor: pointer;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 280px) {
+  section.about {
+    margin: 3em auto;
+    width: 95%;
+    height: 70vh;
+    display: grid;
+    grid-template: repeat(10, 11%) / repeat(10, 10%);
+  }
   .about img {
-    width: 10em;
-    height: 10em;
+    width: 6em;
+    height: 6em;
+    border: 0.5em solid var(--white);
   }
   .popup {
-    font-size: 0.7em;
+    font-size: 0.6em;
   }
   .popup1 {
     grid-column: 1/6;
@@ -123,9 +131,8 @@ section.about {
   }
 
   .popup2 {
-    grid-column: 1/4;
-    grid-row: 3/5;
-    font-size: 1em;
+    grid-column: 2/3;
+    grid-row: 1/6;
   }
 
   .popup3 {
@@ -139,7 +146,47 @@ section.about {
   }
 
   .popup5 {
-    grid-column: 7/9;
+    grid-column: 7/10;
+    grid-row: 1/3;
+  }
+
+  .popup6 {
+    grid-column: 9/10;
+    grid-row: 2/8;
+  }
+}
+
+@media (min-width: 281px) and (max-width: 576px) {
+  .about img {
+    width: 10em;
+    height: 10em;
+  }
+  .popup {
+    font-size: 0.6em;
+  }
+  .popup1 {
+    grid-column: 1/6;
+    grid-row: 1/2;
+    transition: all 1s;
+  }
+
+  .popup2 {
+    grid-column: 1/3;
+    grid-row: 1/7;
+  }
+
+  .popup3 {
+    grid-column: 1/4;
+    grid-row: 4/10;
+  }
+
+  .popup4 {
+    grid-column: 8/11;
+    grid-row: 5/10;
+  }
+
+  .popup5 {
+    grid-column: 7/11;
     grid-row: 1/3;
   }
 
@@ -150,8 +197,6 @@ section.about {
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
-}
 
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
