--- a/src/components/joy/textFadeInAndOut.css
+++ b/src/components/joy/textFadeInAndOut.css
@@ -38,21 +38,9 @@
   }
 }
 
-@media (max-width: 576px) {
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {
-}
-
-/* X-Large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) {
-}
-
-/* XX-Large devices (larger desktops, 1400px and up) */
-@media (max-width: 1400px) {
+@media (min-width: 0) and (max-width: 576px) {
+  .fade_in_text_container {
+    margin-top: 1em;
+    width: 60vw;
+  }
 }
