--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -16,6 +16,10 @@ section.about {
   justify-content: center;
 }
 
+.click_me_section h2 {
+  letter-spacing: 0.5px;
+}
+
 .popup {
   color: var(--white);
   font-size: 1em;
@@ -25,7 +29,7 @@ section.about {
   align-items: center;
   justify-content: center;
   text-align: center;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.5px;
 }
 
 .popup1 {
@@ -194,18 +198,4 @@ section.about {
     grid-column: 9/11;
     grid-row: 3/7;
   }
-}
-
-/* Medium devices (tablets, 768px and up) */
-
-/* Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {
-}
-
-/* X-Large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) {
-}
-
-/* XX-Large devices (larger desktops, 1400px and up) */
-@media (max-width: 1400px) {
 }
