--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,22 @@ body::selection {
   background-color: var(--yellow);
 }
 
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 body {
   background-color: var(--black);
   position: relative;
   width: 100%;
   height: 100%;
+  letter-spacing: 1px;
 }
 
 ::selection {
