--- a/src/index.css
+++ b/src/index.css
@@ -34,12 +34,27 @@ body::selection {
   width: 1px;
 }
 
+html {
+  min-height: 100%;
+}
+
 body {
   background-color: var(--black);
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   letter-spacing: 1px;
+}
+
+main {
+  min-height: 100%;
+  margin-bottom: -3em;
+}
+
+main::after {
+  content: "";
+  display: block;
+  height: 3em;
 }
 
 ::selection {
