--- a/src/components/joy/mainText.css
+++ b/src/components/joy/mainText.css
@@ -13,6 +13,27 @@
   border-radius: 2px;
 }
 
+.main_text a {
+  text-decoration: none;
+  position: relative;
+}
+
+.main_text a:after {
+  content: "";
+  opacity: 0.8;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  border-bottom: 3px solid var(--yellow);
+  border-radius: 1.5px;
+  transition: 0.5s;
+}
+
+.main_text a:hover:after {
+  width: 100%;
+}
+
 @keyframes colorChange {
   0% {
     background-color: black;
